--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "pinia": "^3.0.2",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.13",
     "vuetify": "^3.8.2"
