--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "axios": "^1.9.0",
     "pinia": "^3.0.2",
     "vite-plugin-vuetify": "^2.1.1",
