--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pinia": "^3.0.2",
     "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.13",
+    "vue-i18n": "^9.14.4",
     "vue-router": "^4.5.0",
     "vuetify": "^3.8.2"
   },
